[gd_scene format=3 uid="uid://dmb0kw4tdrqtb"]

[ext_resource type="Script" uid="uid://b2tbjp7rqxg6i" path="res://scripts/ui/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://dat0yy566sln2" path="res://resources/title_screen.png" id="2_n45e2"]
[ext_resource type="Theme" uid="uid://cd30o2j1vebgg" path="res://resources/menu_theme.tres" id="4_cp0ys"]

[node name="MainMenu" type="Control" unique_id=816083823]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1857524586]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_n45e2")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1558030625]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -148.0
offset_right = 113.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer" unique_id=1055595267]
layout_mode = 2
theme = ExtResource("4_cp0ys")
text = "START"
icon_alignment = 1

[node name="Options" type="Button" parent="VBoxContainer" unique_id=924340053]
layout_mode = 2
theme = ExtResource("4_cp0ys")
text = "OPTIONS"

[node name="Lore" type="Button" parent="VBoxContainer" unique_id=495747660]
layout_mode = 2
theme = ExtResource("4_cp0ys")
text = "LORE"

[node name="Quit" type="Button" parent="VBoxContainer" unique_id=1869282102]
layout_mode = 2
theme = ExtResource("4_cp0ys")
text = "QUIT
"

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=1672364434]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 65.0
offset_bottom = 42.0
grow_horizontal = 2
theme = ExtResource("4_cp0ys")
theme_override_font_sizes/normal_font_size = 90
text = "
PLAGNGEY
"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Lore" to="." method="_on_lore_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
